src/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>ACF_Time__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACF Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Email2__c</fullName>
        <label>Account Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Opportunity__r.Account.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from the Account Page</inlineHelpText>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mercury_Id__c</fullName>
        <formula>Opportunity__r.Account.Mercury_People_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mercury Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>Opportunity__r.Account.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity__r.Account.Id, Opportunity__r.Account.FirstName &amp; &quot; &quot;  &amp;  Opportunity__r.Account.LastName)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Current_Loan__c</fullName>
        <formula>Text (Opportunity__r.Age_of_Current_Loan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Age of Current Loan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <formula>Opportunity__r.Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Call_Status__c</fullName>
        <description>Phone appointment, status tracking with auto - response</description>
        <label>Appointment Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_and_Time__c</fullName>
        <label>Appointment Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <label>Appointment Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Held</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_and_Date_Adj__c</fullName>
        <description>Adjusted time and date based on Time Zone</description>
        <label>Appointment Time and Date Adj</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <picklist>
            <picklistValues>
                <fullName>First Appointment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Doc Signing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Appointment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appt_Status_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>trigger field for appointment status data backfill (DH)</description>
        <label>Appt Status Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrokerChannel__c</fullName>
        <description>this field is for separate phone and f2f broker in potential deal report</description>
        <formula>TEXT(Broker__r.Channel__c)</formula>
        <label>Broker Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Email_2__c</fullName>
        <label>Broker Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <formula>Broker__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Liason_Call_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Liason Call Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Mobile__c</fullName>
        <formula>Broker__r.MobilePhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <description>Used in ACF appointment call status changed auto response</description>
        <formula>Broker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Broker is Inactive.
Please check which Broker you&apos;re allocating to this Appointment</errorMessage>
            <filterItems>
                <field>Broker__c.Active_Broker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Brokers_in_Market__c</fullName>
        <formula>Market__r.Number_of_Brokers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokers in Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_Date_And_Time__c</fullName>
        <label>Cancel Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancel_Origin__c</fullName>
        <label>Cancel Origin</label>
        <picklist>
            <picklistValues>
                <fullName>ACF Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Initiated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <description>Notes for why an appointment has been cancelled.</description>
        <label>Cancellation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reasons__c</fullName>
        <description>Reasons why an appointment was cancelled by customer or acf initiated.</description>
        <label>Cancellation Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Construction not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recently Refinanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serviceability - Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serviceability - Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serviceability - LVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to reach customer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cancelled_Unable_to_reach_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for martin, for a number of these appointments we are unable to contact the customer prior to the app and need to hit cancel so they get the relevant notifications</description>
        <label>Cancelled - Unable to reach customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Loan_Balance__c</fullName>
        <formula>Opportunity__r.Car_Loan_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Car Loan Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Updates from Opportunity Page
Editable on the Appointment too</inlineHelpText>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Balance__c</fullName>
        <formula>Opportunity__r.Credit_Card_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Credit Card Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Financials_Up_to_Date__c</fullName>
        <formula>text(Opportunity__r.Current_Financials_Up_to_Date__c)</formula>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Current Financials Up to Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate_Type__c</fullName>
        <formula>Text(Opportunity__r.Current_Interest_Rate_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Current Interest Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate__c</fullName>
        <formula>Opportunity__r.Current_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Current Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Lender__c</fullName>
        <formula>TEXT(Opportunity__r.Current_Lender__c)</formula>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Current Lender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Type__c</fullName>
        <formula>TEXT( Opportunity__r.Current_Loan_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Current Loan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Value__c</fullName>
        <formula>Opportunity__r.Current_Loan_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Current Loan Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Time_Confirmed__c</fullName>
        <description>Workflow rule - Field Update
Capture the time and date the Appointment was confirmed
Built so EOD report works</description>
        <label>Date Time Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <formula>Opportunity__r.Employment_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Employment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate_Expiry__c</fullName>
        <formula>Opportunity__r.Fixed_Rate_Expiry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Fixed Rate Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Followed_Date__c</fullName>
        <description>Used for reschedule or cancellation</description>
        <label>Future Followed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Google Event ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>Opportunity__r.Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for new appointment allocation cancel workflow</description>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_Month__c</fullName>
        <formula>IF(TEXT(MONTH(TODAY())) &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())) = TEXT(MONTH(DATEVALUE(Appointment_Date_and_Time__c))) &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(Appointment_Date_and_Time__c))), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Rescheduled_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rescheduled Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Refinance__c</fullName>
        <formula>Opportunity__r.Last_Refinance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Last Refinance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Contact_Date__c</fullName>
        <label>Manager Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Contact_Notes__c</fullName>
        <label>Manager Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Region__c</fullName>
        <formula>Text (Market__r.Market_Region__c)</formula>
        <label>Market Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Text(+61)&amp;</description>
        <formula>Opportunity__r.Account.PersonMobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Account Page</inlineHelpText>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Name_Mercury__c</fullName>
        <description>Output field for mercury upload of opp</description>
        <formula>Opportunity__r.Account.LastName &amp; &quot;, &quot; &amp; Opportunity__r.Account.FirstName &amp; &quot; - &quot; &amp; Street_Address__c &amp; &quot;, &quot; &amp; City__c &amp; &quot;, &quot; &amp; Postal_Code__c</formula>
        <label>Opp Name - Mercury</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Email__c</fullName>
        <formula>Opportunity__r.Owner.Email</formula>
        <label>Opp Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Income__c</fullName>
        <formula>Opportunity__r.Partner_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Partner Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Loan_Balance__c</fullName>
        <formula>Opportunity__r.Personal_Loan_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Personal Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Opportunity__r.Account.Phone</formula>
        <inlineHelpText>Updates from Account Page</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Notes__c</fullName>
        <label>Pre Sales Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_User__c</fullName>
        <description>Shows Opportunity Owner on Appointment Pages</description>
        <formula>Opportunity__r.Owner.FirstName &amp; Opportunity__r.Owner.LastName</formula>
        <inlineHelpText>This is the Opportunity Owner</inlineHelpText>
        <label>Pre Sales User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Broker_Mobile__c</fullName>
        <label>Previous Broker Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Broker__c</fullName>
        <label>Previous Broker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Documents__c</fullName>
        <label>Required Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Recent Loan Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recent Payslips for All Loan Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last 2 Years Tax Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATO Notice of Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card or Personal Loan Statements</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Retraining_Actions__c</fullName>
        <description>Notes fo retraining pre-sales. Related to appointments which were not successful.</description>
        <label>Retraining Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retraining_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this box when pre-sales retraining has been completed. Related to the EOD report.</description>
        <label>Retraining Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retraining_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dose the pre-sales agent require retraining post unsuccessful appointment</description>
        <label>Retraining Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STP_Forecast_Date__c</fullName>
        <label>STP Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speciality_Skills__c</fullName>
        <label>Speciality Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Complex Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK-Specialty Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receive Phone Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Papadimitriou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Rajpurohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthony Arida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Wedesweiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Rayner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damien Mckay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dorian Loupis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Giguere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacqui Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Blanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph Eichenblatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim McKenzie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aaron Plumridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andre Spaapen</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sydney_Timezone_Offset__c</fullName>
        <formula>Region__r.Sydney_Timezone_Offset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sydney Timezone Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_New_Appointment_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test New Appointment Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <formula>Text(Opportunity__r.Transaction_Type__c)</formula>
        <inlineHelpText>Updates from Opportunity Page</inlineHelpText>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>Adelaide_Appointments_Due_Next_7_Days</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Market__c</columns>
        <columns>Brokers_in_Market__c</columns>
        <columns>Broker__c</columns>
        <columns>Appointment_Date_and_Time__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Appointment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Date_and_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Adelaide</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Appointment__c.Confirmed_Appointment</value>
        </filters>
        <filters>
            <field>Appointment_Status__c</field>
            <operation>equals</operation>
            <value>New,Allocated</value>
        </filters>
        <label>Adelaide Appointments Due Next 7 Days</label>
        <sharedTo>
            <portalRole>ACFPartnerManager</portalRole>
            <role>Executive_Team</role>
            <role>Partner_Broker_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Allocation_NSW</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Date_and_Time__c</columns>
        <columns>Market_Region__c</columns>
        <columns>Market__c</columns>
        <columns>City__c</columns>
        <columns>Broker__c</columns>
        <columns>Current_Loan_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Time_Confirmed__c</columns>
        <columns>Appointment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Date_and_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/30/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Appointment__c.Confirmed_Appointment</value>
        </filters>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>First Appointment,Phone Appointment</value>
        </filters>
        <filters>
            <field>Appointment_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Market_Region__c</field>
            <operation>equals</operation>
            <value>Sydney,Canberra,Illawarra,Central Coast / Newcastle</value>
        </filters>
        <label>Allocation NSW</label>
        <sharedTo>
            <role>Back_Office_Team</role>
            <role>Executive_Team</role>
            <role>Production_Management</role>
            <role>Production_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Allocation_Phone</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Date_and_Time__c</columns>
        <columns>Market_Region__c</columns>
        <columns>Market__c</columns>
        <columns>City__c</columns>
        <columns>Broker__c</columns>
        <columns>Current_Loan_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Time_Confirmed__c</columns>
        <columns>Appointment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Appointment__c.Confirmed_Appointment</value>
        </filters>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>First Appointment,Phone Appointment</value>
        </filters>
        <filters>
            <field>Appointment_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>phone broker market</value>
        </filters>
        <label>Allocation Phone</label>
        <sharedTo>
            <role>Back_Office_Team</role>
            <role>Executive_Team</role>
            <role>Phone_Broker_Management</role>
            <role>Production_Management</role>
            <role>Production_Team</role>
        </sharedTo>
    </listViews>
</CustomObject>